--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,9 +7,9 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.DA949528" = "hologra"
+	"last_search.DA949528" = "recorder"
 	"OpenInspectorPreview.DA949528" = "0"
-	"currentGroup.DA949528" = "menu"
+	"currentGroup.DA949528" = "all"
 }
 providers = {
 	adb = {
@@ -56,6 +56,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"re"
 ]
 searchItemFavorites = [
 ]
