Ignored vuforia package for git
Former-commit-id: 5174fa37dd31248b201764b60f6892f6633397ae

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 # Example Samples
 /[Aa]ssets/[Ss]amples*
 
+# Vuforia Packages
+/[Pp]ackages/com.ptc.vuforia.engine-*
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
