--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,10 @@
 # Example Samples
 /[Aa]ssets/[Ss]amples*
 
+# Big Packages
+/[Pp]ackages/*.tgz
+/[Pp]ackages/MixedReality
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
